# strswitch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml
include/strswitch/: strswitch.hpp
tests/: CMakeLists.txt  bench_strswitch.cpp  test_strswitch.cpp
